--- a/boildown.html
+++ b/boildown.html
@@ -10,14 +10,15 @@
 		<h1>boildown</h1>
 		<textarea id="input" rows="20">
 == boildown ==
-1. item
-  text
-2. second
-  1. other
-3. third
-  ```[java]
-  some java code
-  ```
+
+== Text Formatting ==
+* *bold* ``*bold*``
+* _italic_ ``_italic_``
+* +++inserted+++ ``+++inserted+++``
+* ---deleted--- ``---deleted---``
+* `code` `` `code` ``
+
+== Links ==
 
 let `me *and* you _be_` test
 ----
