describe and example

--- a/boildown.html
+++ b/boildown.html
@@ -17,13 +17,39 @@
 > -- me
 > :::
 
+= > this is a quote
+= > in two lines
+= > :::[>]
+= > -- me
+= > :::
+
+? > this is a quote
+? > in two lines
+? > :::[>]
+? > -- me
+? > :::
+
 == Text Formatting ==
-* *bold* ``*bold*``
-* _italic_ ``_italic_``
-* ~strikethrough~ ``~strikethrough~``
-* +++inserted+++ ``+++inserted+++``
-* ---deleted--- ``---deleted---``
-* `code` `` `code` ``
+=  \\
+
+? *bold*
+
+? _italic_
+
+? ~strikethrough~
+
+? +++inserted+++ 
+
+? ---deleted--- 
+
+? `code`
+
+? ``*no* _markup_ here`` \\
+? `*with* _markup_ here`
+
+== Links ==
+
+
 
 == Tables ==
 * `|[ caption ]|` `<table>`
@@ -34,7 +60,7 @@
 * `||  cell    |` `<td>` (border left)
 * `|   cell   ||` `<td>` (border right)
 
-== Links ==
+
 
 let `me *and* you _be_` test
 ----
