tables - first shot

--- a/boildown.html
+++ b/boildown.html
@@ -11,6 +11,15 @@
 		<textarea id="input" rows="20">
 == boildown ==
 
+|[ caption ]|
+|----|
+|! hello, !|
+|! *world* !|
+|====|
+| this is |[#ff9900]
+|| a first example ||
+|----|
+
 > this is a quote
 > in two lines
 > :::[>]
