inline, blocks, options as const, block quotes

--- a/boildown.html
+++ b/boildown.html
@@ -40,14 +40,15 @@ Block quotes:
 ? > multiple lines
 
 Options can be given instead the first line of the quote:
-? > [\\]
-? > a quote using
-? > multiple lines
-? > wrapping like 
-? > source
+? >>>[\\]
+? a quote using
+? multiple lines
+? wrapping like 
+? source
+? >>>
 
 Using minipages to position a cite footer.
-? > ...we fell that reasonably 
+? > [...] we fell that reasonably 
 ? > we'll well educated 
 ? > and the kids would be lucky, if  
 ? > they are as well educated as we are, 
