nested inline with just 1 or more (can be escaped), code cleanup using generic block functions to remove duplicate code

--- a/boildown.html
+++ b/boildown.html
@@ -34,14 +34,14 @@ Advanced, 2 character marks:
 ? ##blue#colour##
 ? ##FF0000#colour##
 
-Nestable, 2 or more character marks:
-? ^^superscript^^
-? ^^a^^^b^^^ ^^
-? ^^^b^^a^^ ^^^
+Nestable, 1 or more character marks:
+? ^superscript^
+? ^a^^b^^ ^
+? ^^b^a^ ^^
 
-? __subscript__
-? __a___b___ __
-? ___b__a__ ___
+? _subscript_
+? _a__b__ _
+? __b_a_ __
 
 Escaping inline markup using `{{{{}}`...`{{}}}}`:
 ? {{*plain* _text_}}
@@ -96,8 +96,8 @@ Headings nested with minipages:
 
 === Quoting ===
 Inline quoting:
-? a ''quote'', a ''' ''quote'' within a quote'''
-? likewise, a '' '''quote''' within a quote''
+? a 'quote', a '' 'quote' within a quote''
+? likewise, a ' ''quote'' within a quote'
 
 Simple block quotes start with `> ` (space!): 
 ? > a quote using
