--- a/boildown.html
+++ b/boildown.html
@@ -9,37 +9,35 @@
 	<div class='column'>
 		<h1>boildown</h1>
 		<textarea id="input" rows="20">
-=== Hello, World! ===
-=== a brief but complete boildown user manual ===
-
+=== User Manual ===
+=== for the boildown markup language ===
 
 === Text Formatting ===
-Basics, 1 character marks:
-? *bold*
-
+Semantic markups use single character marks:
 ? _emphasis_
+
+? *strong emphasis*
+
+? "cite"
+
+?  /alternative voice/ 
+
+?  -inaccurate text- 
+
+?  :definition: 
+
+? .ABBR.
 
 ? `code`, ```
 
-? @monospace@
+? $sample$
 
-Advanced, 2 character marks:
-? ==small caps==
+? @user input@, @@@
 
-? __underline__
+? !annotated!{spelling}
 
-? //strikethrough//
+...one or more when nesting makes sense...
 
-? --deleted-- 
-
-? ++inserted++ 
-
-? ``key``, `````
-
-? ##blue#colour##
-? ##FF0000#colour##
-
-Nestable, 1 or more character marks:
 ? x^superscript^
 ? ^a^^b^^ ^
 ? ^^b^a^ ^^
@@ -52,19 +50,39 @@ Nestable, 1 or more character marks:
 ? a '' 'quote' within a quote'',
 ? a ' ''quote'' within a quote'
 
-Escaping inline markup using `{{{{}}`...`{{}}}}`:
+Stylistic or editorial markups use two character marks:
+? ``monospace``
+
+? ==small caps==
+
+? __underlined__
+
+? ::coloured::{green}
+? ::coloured::{#FF0000}
+
+? --deleted--
+
+? ++inserted++
+
+
+=== Inline Escaping ===
+Text in-between double curly brackets `{{{{}}`...`{{}}}}` is not interpreted. 
 ? {{*plain* _text_}}
+
+Escaped sections can be contained within inline elements.
 ? `{{*plain* _text_}}`
 ? *plain {{_text_}}*
 
-New paragraphs start after blank lines or within a new block. 
+=== Special Characters ===
+ 
 Manual line breaks are forced using `\\`:
 ? manual line \\ break
+Otherwise new paragraphs start after blank lines or within a new block.
 
+Line breaks opportunities can be marked using `\-`:
 ? along\-word\-that\-might\-break\-somewhere
 
-
-=== Special Characters ===
+Special punctuation marks:
 ? ...
 
 ? x --- y
@@ -154,6 +172,18 @@ Using minipages to position a cite footer.
 ? > :::
 
 
+=== Thematic Breaks ===
+Use 4 or more plus or minus symbols:
+
+? ----
+
+? +++++++
+
+or at least 3 asterisk symbols separated by at least one space:
+?    * * *   
+
+?  **  * ** * ** * **
+
 === Images ===
 Images are given in format `((_URL_ _[title]_))`:
 ? ((bee.png a bee))
@@ -201,10 +231,13 @@ And even roman numbers work, but here the lists have to start with `I.`
 In case of letters a specified item cannot have multiple letters. 
 Instead the placeholder `#.` should be used.
 
-The `*` is used for bullet lists. Again it has to be followed by a space.
+Asterisk `*` or minus `-` followed by a space are used for bullet lists.
 
 ? * one
 ? * other
+
+? - one
+? - other
 
 Any content can be nested within an item. 
 All content that should be nested has to be indented by 2 spaces and/or tabs
@@ -235,6 +268,12 @@ Highlight lines...
 ? ```*
 ? ! 1 * 2 * 3 = 6
 ? x 1 + 2 + 3 = x6x
+? ```
+
+Draw attention to keywords using the option `{_wordlist_}`:
+? ```{key word}
+? Highlights the key words
+? word by word
 ? ```
 
 === Tables ===
@@ -287,15 +326,15 @@ Highlight lines...
 
 
 === Minipages ===
-? :::{aside}[<>][#F44336]
-? ::::[50%][#2196F3][<=]
+? ***{aside}[<>][#F44336]
+? ****[50%][#2196F3][<=]
 ? another page within a page
-? ::::
-? ::::[50%][#4CAF50][=>]
+? ****
+? ****[50%][#4CAF50][=>]
 ? and another one besides
-? ::::
+? ****
 ? and back in the outer minipage
-? :::
+? ***
 
 		</textarea>
 		<button onclick="show()">show</button>
