FIXED example using minipages

--- a/boildown.html
+++ b/boildown.html
@@ -127,12 +127,12 @@ When two headings directly follow each other the second is considered a subtitle
 ? === Sub ===
 
 Headings nest within minipages:
-? :::
+? ***
 ? === Nested one level ===
-? ::::
+? ****
 ? === Nested two levels ===
-? ::::
-? :::
+? ****
+? ***
 
 To specify the name of a headings anchor use `{_..._}`:
 ? === Heading ==={anchorname}
@@ -166,10 +166,10 @@ Using minipages to position a cite footer.
 ? > We're only beginning to realize 
 ? > how little we know 
 ? > about the nature of reality.
-? > :::{footer}[>]
+? > ***{footer}[>]
 ? >  --- Russell Ackoff, 
 ? > _Speech on Systems_
-? > :::
+? > ***
 
 
 === Thematic Breaks ===
