--- a/boildown.html
+++ b/boildown.html
@@ -312,51 +312,44 @@ If the caption isn't stated first, the caption goes below the images:
 
 
 === Tables ===
-:: caption ::
-|...........|
-|  hello    |*{1 2}
-| *world*   |*
-|-----------|
-: this is   :[#ff9900]
-|-----------|
 
-:: ::[20%]['][pad5][=>]
-:.........:[#4CAF50]
-: Green :*{2}
-:.........:[#4CAF50]
-: 500 :
-: #4CAF50 :
-:.........:[#E8F5E9]
-: 50 :
-: #E8F5E9 :
-:.........:[#C8E6C9]
-: 100 :
-: #C8E6C9 :
-:.........:[#A5D6A7]
-: 200 :
-: #A5D6A7 :
-:.........:[#81C784]
-: 300 :
-: #81C784 :
-:.........:[#66BB6A]
-: 400 :
-: #66BB6A :
-:.........:[#4CAF50]
-: 500 :
-: #4CAF50 :
-:.........:[#43A047]
-: 600 :
-: #43A047 :
-:.........:[#388E3C]
-: 700 :
-: #388E3C :
-:.........:[#2E7D32]
-: 800 :
-: #2E7D32 :
-:.........:[#1B5E20]
-: 900 :
-: #1B5E20 :
-:.........:
+? :: green colors ::[20%]['][pad5][=>]
+? :.........:[#4CAF50]
+? : Green   :*{2}
+? :.........:[#4CAF50]
+? : 500     :
+? : #4CAF50 :
+? :.........:[#E8F5E9]
+? : 50      :
+? : #E8F5E9 :
+? :.........:[#C8E6C9]
+? : 100     :
+? : #C8E6C9 :
+? :.........:[#A5D6A7]
+? : 200     :
+? : #A5D6A7 :
+? :.........:[#81C784]
+? : 300     :
+? : #81C784 :
+? :.........:[#66BB6A]
+? : 400     :
+? : #66BB6A :
+? :.........:[#4CAF50]
+? : 500     :
+? : #4CAF50 :
+? :.........:[#43A047]
+? : 600     :
+? : #43A047 :
+? :.........:[#388E3C]
+? : 700     :
+? : #388E3C :
+? :.........:[#2E7D32]
+? : 800     :
+? : #2E7D32 :
+? :.........:[#1B5E20]
+? : 900     :
+? : #1B5E20 :
+? :.........:
 
 
 === Minipages ===
@@ -370,6 +363,10 @@ If the caption isn't stated first, the caption goes below the images:
 ? and back in the outer minipage
 ? ***
 
+
+=== Self Documentation ===
+
+? ! _shows_ the output
 
 === Document Setup ===
 As blocks cope with missing end blocks one can start a document with a minipage
